--- a/web/style.css
+++ b/web/style.css
@@ -74,3 +74,29 @@ p.welcome-end {
   text-decoration: none;
   cursor: pointer;
 }
+
+.legend {
+background-color: #fff;
+border-radius: 3px;
+bottom: 10px;
+box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+/*font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif; */
+padding: 10px;
+position: absolute;
+left: 10px;
+max-height: calc(100% - 230px);
+z-index: 1;
+overflow: auto;
+}
+
+.legend h4 {
+margin: 0 0 10px;
+}
+
+.legend div span {
+border-radius: 50%;
+display: inline-block;
+height: 10px;
+margin-right: 5px;
+width: 10px;
+}
