--- a/web/style.css
+++ b/web/style.css
@@ -84,7 +84,7 @@ box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 padding: 10px;
 position: absolute;
 left: 10px;
-max-height: calc(100% - 230px);
+max-height: 250px;
 z-index: 1;
 overflow: auto;
 }
